Fix login, signup buttons on Firefox

--- a/src-core/src/components/button/button.scss
+++ b/src-core/src/components/button/button.scss
@@ -148,13 +148,11 @@ button {
   //   @include background-color("selected");
   // }
 }
-:host(.login, .logout) {
+:host(.login),
+:host(.signup) {
   @include display-flex();
-  button.login,
-  button.signup {
+  button {
     height: 32px;
-    font-size: 18px;
-    // padding: 0 50px;
     font-size: 18px;
     line-height: 22px;
     width: 100%;
